# sxs

DetectColor/: CMakeLists.txt  README.md  main.cpp
DetectColor/include/: rgb.h
DetectColor/src/: rgb.cpp
